--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "reasonmtl-dojo-1",
   "version": "0.1.0",
   "scripts": {
-    "build": "bsb -make-world",
-    "start": "bsb -make-world -w",
+    "build": "export BS_CMT_POST_PROCESS_CMD=\"gentype\" && bsb -make-world",
+    "start": "export BS_CMT_POST_PROCESS_CMD=\"gentype\" && bsb -make-world -w",
     "clean": "bsb -clean-world",
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack": "webpack -w",
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "bs-platform": "^4.0.7",
+    "gentype": "^2.17.0",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.0.1",
     "webpack-cli": "^3.1.1",
