Add another more up-to-date react piano
Running into this now:
react-dom.development.js:19707 Download the React DevTools for a better development experience: https://fb.me/react-devtoolsYou might need to use a local HTTP server (instead of file://): https://fb.me/react-devtools-faq
caml_missing_polyfill.js:6 Uncaught Error:  not implemented by BuckleScript yet

    at Object.not_implemented (caml_missing_polyfill.js:6)
    at eval (Grid.bs.js:24)
    at Object._1 (curry.js:64)
    at Object.render (ReasonReact.js:313)
    at finishClassComponent (react-dom.development.js:14301)
    at updateClassComponent (react-dom.development.js:14264)
    at beginWork (react-dom.development.js:15082)
    at performUnitOfWork (react-dom.development.js:17820)
    at workLoop (react-dom.development.js:17860)
    at HTMLUnknownElement.callCallback (react-dom.development.js:149)
not_implemented @ caml_missing_polyfill.js:6
(anonymous) @ Grid.bs.js:24
_1 @ curry.js:64
render @ ReasonReact.js:313
finishClassComponent @ react-dom.development.js:14301
updateClassComponent @ react-dom.development.js:14264
beginWork @ react-dom.development.js:15082
performUnitOfWork @ react-dom.development.js:17820
workLoop @ react-dom.development.js:17860
callCallback @ react-dom.development.js:149
invokeGuardedCallbackDev @ react-dom.development.js:199
invokeGuardedCallback @ react-dom.development.js:256
replayUnitOfWork @ react-dom.development.js:17107
renderRoot @ react-dom.development.js:17979
performWorkOnRoot @ react-dom.development.js:18837
performWork @ react-dom.development.js:18749
performSyncWork @ react-dom.development.js:18723
requestWork @ react-dom.development.js:18592
scheduleWork @ react-dom.development.js:18401
scheduleRootUpdate @ react-dom.development.js:19069
updateContainerAtExpirationTime @ react-dom.development.js:19097
updateContainer @ react-dom.development.js:19154
ReactRoot.render @ react-dom.development.js:19416
(anonymous) @ react-dom.development.js:19556
unbatchedUpdates @ r

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-piano": "^3.1.2",
     "reason-react": ">=0.4.0"
   },
   "devDependencies": {
