--- a/bsconfig.json
+++ b/bsconfig.json
@@ -19,7 +19,9 @@
   ],
   "suffix": ".bs.js",
   "namespace": true,
-  "bs-dependencies": ["reason-react"],
+  "bs-dependencies": [
+    "reason-react"
+  ],
   "refmt": 3,
   "gentypeconfig": {
     "language": "untyped",
